# speedmonitor

./: .coverage  .env.example  .gitignore  Claude.md  README.md  TEST_REPORT_GRAFANA_CONFIG.md  docker-compose.yml  main.py  pyproject.toml
.claude/agents/: code-reviewer.md  test-engineer.md
docker/: Dockerfile
docker/grafana/dashboards/: speed-monitor.json
docker/grafana/provisioning/datasources/: influxdb.yml
scripts/: setup.sh  stop.sh  test-speedtest.sh  validate-setup.sh
speed_tester/: config.py  influx_client.py  models.py  monitor.py  speed_test_service.py
tests/: test_config.py  test_docker_compose_migration.py  test_grafana_config.py  test_grafana_config_examples.md  test_influx_client.py  test_models.py  test_speed_test_service.py
